--- a/Developpement/design/register.css
+++ b/Developpement/design/register.css
@@ -135,7 +135,7 @@ select:focus{
 }
 input[type=submit],
 a.submit{
-	background-color:#50b326;
+	background-color:#375D81;
 	border:0px;
 	-moz-border-radius:15px;
 	-webkit-border-radius:15px;
