--- a/Developpement/design/validation.css
+++ b/Developpement/design/validation.css
@@ -100,7 +100,7 @@ select:focus{
 }
 input[type=submit],
 a.submit{
-	background-color:#50b326;
+	background-color:#375D81;
 	color:#fff;
 	cursor:pointer;
 	font-family:Arial,sans-serif;
