Signed-off-by: Michel Gille <gille@intechinfo.fr>

--- a/Developpement/HTML/debate.css
+++ b/Developpement/HTML/debate.css
@@ -18,7 +18,7 @@
 .date_comments
 {
 	margin-top: -7px;
-	background-color: #85c630;
+	background-color: #58b54c;
 	color: white;
 	font-size: 10px;
 	height: 78%;
@@ -40,7 +40,7 @@ background-color: white;
 	
 
 	
-	border-color:#85c630;
+	border-color:#58b54c;
 	border-width:3px;
 	border-style:solid;
 	width:100%
