--- a/Developpement/HTML/style.css
+++ b/Developpement/HTML/style.css
@@ -16,7 +16,7 @@ a
 }
 .header
 {
-	background-color: #85c630;
+	background-color: #58b54c;
 	width: 100%;
 }
 .header_info
@@ -37,7 +37,7 @@ a
 .news_sort
 {
 	float: right;
-	background-color: #85c630;
+	background-color: #58b54c;
 	color: white;
 	font-size: 18px;
 	font-family: 'coolvetica_rg';
@@ -54,7 +54,7 @@ a
 }
 .title_post
 {
-	background-color: #85c630;
+	background-color: #58b54c;
 	width: 100%;
 	color: white;
 	font-family: 'coolvetica_rg';
@@ -62,7 +62,7 @@ a
 }
 .rate
 {
-	background-color: #85c630;
+	background-color: #58b54c;
 	width: 60px;
 	color: white;
 	font-family: 'coolvetica_rg';
@@ -70,7 +70,7 @@ a
 }
 .description
 {
-	border-color:#85c630;
+	border-color:#58b54c;
 	border-width:6;
 	border-style:solid;
 	background-color: white;
@@ -78,7 +78,7 @@ a
 }
 .date_news
 {
-	background-color: #85c630;
+	background-color: #58b54c;
 	color: white;
 	font-size: 10px;
 	height: 100%;
@@ -90,7 +90,7 @@ a
 }
 .block_title
 {
-	background-color: #85c630;
+	background-color: #58b54c;
 	color: white;
 	font-family: 'coolvetica_rg';
 	font-size: 24px;
@@ -99,7 +99,7 @@ a
 .block_content
 {
 	font-size: 14px;
-	border-color:#85c630;
+	border-color:#58b54c;
 	border-width:6;
 	border-style:solid;
 	background-color: white;
@@ -108,14 +108,14 @@ a
 {
 	float: right;
 	color: white;
-	background-color: #85c630;
+	background-color: #58b54c;
 	font-family: 'coolvetica_rg';
 	width: 35px;
 	font-size: 14px;
 }
 .block_title_right
 {
-	background-color: #85c630;
+	background-color: #58b54c;
 	color: white;
 	font-family: 'coolvetica_rg';
 	font-size: 24px;
@@ -124,7 +124,7 @@ a
 .block_content_right
 {
 	font-size: 14px;
-	border-color:#85c630;
+	border-color:#58b54c;
 	border-width:6;
 	border-style:solid;
 	background-color: white;
@@ -133,7 +133,7 @@ a
 {
 	float: right;
 	color: white;
-	background-color: #85c630;
+	background-color: #58b54c;
 	font-family: 'coolvetica_rg';
 	width: 35px;
 	font-size: 14px;
@@ -143,7 +143,7 @@ a
 	float: right;
 	color: white;
 	font-family: 'coolvetica_rg';
-	background-color: #85c630;
+	background-color: #58b54c;
 	text-align: center;
 	width: 100px;
 	margin-top: -5px;
@@ -159,7 +159,7 @@ a
 	float: right;
 	color: white;
 	font-family: 'coolvetica_rg';
-	background-color: #85c630;
+	background-color: #58b54c;
 	text-align: center;
 	width: 100px;
 	margin-top: -5px;
