--- a/Developpement/design/debate.css
+++ b/Developpement/design/debate.css
@@ -1,5 +1,18 @@
 .presentation {
-    background-color: #85C630;
+       background: #34782a;
+   background: -webkit-gradient(linear, left top, left bottom, from(#5bb64f), to(#34782a));
+   background: -webkit-linear-gradient(top, #5bb64f, #34782a);
+   background: -moz-linear-gradient(top, #5bb64f, #34782a);
+   background: -ms-linear-gradient(top, #5bb64f, #34782a);
+   background: -o-linear-gradient(top, #5bb64f, #34782a);
+   padding: 6px -5px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: 2px 2px 5px black;
     border-radius: 5px 5px 5px 5px;
     box-shadow: 10px 10px 8px #417324;
     color: white;
@@ -11,7 +24,20 @@
     width: 838px;
 }
 input[type="submit"] {
-    background-color: #50B326;
+       background: #34782a;
+   background: -webkit-gradient(linear, left top, left bottom, from(#5bb64f), to(#34782a));
+   background: -webkit-linear-gradient(top, #5bb64f, #34782a);
+   background: -moz-linear-gradient(top, #5bb64f, #34782a);
+   background: -ms-linear-gradient(top, #5bb64f, #34782a);
+   background: -o-linear-gradient(top, #5bb64f, #34782a);
+   padding: 6px -5px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: 2px 2px 5px black;
     border: 0 none;
     border-radius: 5px 5px 5px 5px;
     box-shadow: 3px 3px 2px #417324;
@@ -33,7 +59,20 @@ input[type="submit"] {
     z-index: 1;
 }
 dl {
-    background-color: #85C630;
+        background: #34782a;
+   background: -webkit-gradient(linear, left top, left bottom, from(#5bb64f), to(#34782a));
+   background: -webkit-linear-gradient(top, #5bb64f, #34782a);
+   background: -moz-linear-gradient(top, #5bb64f, #34782a);
+   background: -ms-linear-gradient(top, #5bb64f, #34782a);
+   background: -o-linear-gradient(top, #5bb64f, #34782a);
+   padding: 6px -5px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: 2px 2px 5px black;
     border-radius: 5px 5px 5px 5px;
     box-shadow: 10px 10px 8px #417324;
     color: white;
@@ -47,7 +86,20 @@ dl {
     z-index: -17;
 }
 dt {
-    background-color: #85C630;
+        background: #34782a;
+   background: -webkit-gradient(linear, left top, left bottom, from(#5bb64f), to(#34782a));
+   background: -webkit-linear-gradient(top, #5bb64f, #34782a);
+   background: -moz-linear-gradient(top, #5bb64f, #34782a);
+   background: -ms-linear-gradient(top, #5bb64f, #34782a);
+   background: -o-linear-gradient(top, #5bb64f, #34782a);
+   padding: 6px -5px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: 2px 2px 5px black;
     border-radius: 5px 5px 5px 5px;
     box-shadow: 10px 10px 8px #417324;
     color: white;
@@ -58,7 +110,20 @@ dt {
     width: 838px;
 }
 dd {
-    background-color: #85C630;
+       background: #34782a;
+   background: -webkit-gradient(linear, left top, left bottom, from(#5bb64f), to(#34782a));
+   background: -webkit-linear-gradient(top, #5bb64f, #34782a);
+   background: -moz-linear-gradient(top, #5bb64f, #34782a);
+   background: -ms-linear-gradient(top, #5bb64f, #34782a);
+   background: -o-linear-gradient(top, #5bb64f, #34782a);
+   padding: 6px -5px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: 2px 2px 5px black;
     display: inline-block;
     margin: 0;
     padding: 0;
