--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -209,7 +209,7 @@ border: 1px solid #003e40;
     margin-top: -5px;
 }
 .description_news {
-    background-color: #50B326;
+    background-color: #34782a;
 
     color: white;
     font-family: 'coolvetica_rg';
@@ -644,13 +644,8 @@ select {
     border: 0 none;
     box-shadow: 0 0 3px #AAAAAA;
     cursor: pointer;
-    font-family: 'coolvetica_rg';
-    font-size: 22px;
-    padding: 3px;
-}
-select:active, select:focus {
-    border: 5px solid #5bb64f;
-    outline: medium none;
+    font-size: 14px;
+    padding: 0px;
 }
 .create_article_errors {
     background-color: #50B326;
@@ -793,7 +788,7 @@ border: 1px solid #003e40;
 	color: white;
 }
 .tri {
-    margin: auto;
+  
     -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
@@ -811,13 +806,12 @@ border: 1px solid #003e40;
    -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
    -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
    box-shadow: rgba(0,0,0,1) 0 1px 0;
+    box-shadow: 3px 3px 2px #003e40;
    text-shadow: 2px 2px 5px black;
-   width: 924px;
-   height: 75px;
+   width: 300px;
 }
 .tri2 {
-    margin: auto;
-    width: 37%;
+ 
 }
 .shorti {
     color: white;
@@ -826,6 +820,91 @@ border: 1px solid #003e40;
     margin: auto;
    float: left;
 }
+#volet {
+			width: 270px;
+			padding: 0px;
+			
+			top: 150px;
+		}
+		
+		#volet a.ouvrir,
+		#volet a.fermer {
+		padding: 10px 0px;
+	
+	    -webkit-border-radius: 6px;
+	   -moz-border-radius: 6px;
+	   border-radius: 6px;
+	   border: 1px solid #003e40;
+	   background: #34782a;
+	   background: -webkit-gradient(linear, left top, left bottom, from(#5bb64f), to(#34782a));
+	   background: -webkit-linear-gradient(top, #5bb64f, #34782a);
+	   background: -moz-linear-gradient(top, #5bb64f, #34782a);
+	   background: -ms-linear-gradient(top, #5bb64f, #34782a);
+	   background: -o-linear-gradient(top, #5bb64f, #34782a);
+	   padding: 3px -2px;
+	   -webkit-border-radius: 6px;
+	   -moz-border-radius: 6px;
+	   border-radius: 6px;
+	   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+	   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+	   box-shadow: rgba(0,0,0,1) 0 1px 0;
+	   text-shadow: 2px 2px 5px black;
+				color: white;
+				font-family: 'coolvetica_rg';
+			font-size: 20px;
+			top: 150px;
+		}
+
+		#volet {
+			position: absolute;
+			top: 80px;
+			left: -310px;  /* test fixed + scroll, on retire la position top */
+			-webkit-transition: all .5s ease-in;
+			-moz-transition: all .5s ease-in;
+			transition: all .5s ease-in;
+		}
+		#volet a.ouvrir,
+		#volet a.fermer {
+			position: absolute;
+			right: -75px;
+			top: 90px;
+			-webkit-transform: rotate(270deg);
+			-moz-transform: rotate(270deg);
+			-o-transform: rotate(270deg);
+			-ms-transform: rotate(270deg);
+			-moz-radius: 0 0 8px 8px;
+			
+			
+			
+		}
+		#volet a.fermer {
+			display: none;
+		}
+		#volet:target {
+			left: 0px;
+		}
+
+		/* code pour la fermeture */
+
+		#volet:target a.fermer {
+			display: block;
+		}
+		#volet:target a.ouvrir {
+			display: none;
+		}
+		#volet_clos:target #volet {
+			left: -310px;
+		}
+		
+		 /* test fixed + scroll */
+		#volet_clos {
+			position: fixed; 
+			top: 0px; left: 0;
+		}
+
+
+
+
 #area {
     display: none;
 }
@@ -1050,6 +1129,29 @@ border: 1px solid #003e40;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
     width: 924px;
 }
+.search_news {
+  
+    width: 300px;
+	
+	   border: 1px solid #003e40;
+   background: #5bb64f;
+   background: -webkit-gradient(linear, left top, left bottom, from(#34782a), to(#5bb64f));
+   background: -webkit-linear-gradient(top, #34782a, #5bb64f);
+   background: -moz-linear-gradient(top, #34782a, #5bb64f);
+   background: -ms-linear-gradient(top, #34782a, #5bb64f);
+   background: -o-linear-gradient(top, #34782a, #5bb64f);
+
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+       box-shadow: 3px 3px 2px #003e40;
+}
+
+
+
 #pardessus {
 	
   height:630px;
