--- a/Developpement/tests/debate.css
+++ b/Developpement/tests/debate.css
@@ -18,7 +18,7 @@
 .date_comments
 {
 	margin-top: -19px;
-	background-color: #85c630;
+	background-color: #58b54c;
 	color: white;
 	font-size: 10px;
 	height: 60%;
@@ -40,7 +40,7 @@ background-color: white;
 	
 
 	
-	border-color:#85c630;
+	border-color:#58b54c;
 	border-width:6;
 	border-style:solid;
 	background-color: white;
