--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -747,8 +747,25 @@ border: 1px solid #003e40;
     float: right;
     margin-top: -5px;
 }
-.comments {
-    background-color: #1a9dc5;
+.comment_post {
+    -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   border: 1px solid #003e40;
+   background: #1f6e86;
+   background: -webkit-gradient(linear, left top, left bottom, from(#bfe9f6), to(#7cd3ed));
+   background: -webkit-linear-gradient(top, #bfe9f6, #7cd3ed);
+   background: -moz-linear-gradient(top, #bfe9f6, #7cd3ed);
+   background: -ms-linear-gradient(top, #bfe9f6, #7cd3ed);
+   background: -o-linear-gradient(top, #bfe9f6, #7cd3ed);
+   padding: 6px -5px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+
     font-size: 25px;
     height: 100%;
     position: relative;
@@ -1165,4 +1182,55 @@ color:red;
   width:500px;
   font-size:20px;
 }
+
+
+
+#wrapper {
+	width: 800px;
+	margin-left: auto;
+	margin-right: auto;
+	}
+
+.accordionButton {	
+	width: 800px;
+	float: left;
+	_float: none;  /* Float works in all browsers but IE6 */
+border: 1px solid #003e40;
+   background: #1f6e86;
+   background: -webkit-gradient(linear, left top, left bottom, from(#1a9dc5), to(#1f6e86));
+   background: -webkit-linear-gradient(top, #1a9dc5, #1f6e86);
+   background: -moz-linear-gradient(top, #1a9dc5, #1f6e86);
+   background: -ms-linear-gradient(top, #1a9dc5, #1f6e86);
+   background: -o-linear-gradient(top, #1a9dc5, #1f6e86);
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: 2px 2px 5px black;
+   color: white;
+   font-size: 20px;
+   font-family: 'coolvetica_rg';
+	cursor: pointer;
+	}
+	
+.accordionContent {	
+	width: 800px;
+	float: left;
+	_float: none; /* Float works in all browsers but IE6 */
+	background: #95B1CE;
+	}
+	
+/***********************************************************************************************************************
+ EXTRA STYLES ADDED FOR MOUSEOVER / ACTIVE EVENTS
+************************************************************************************************************************/
+
+.on {
+	background: #41bfe6;
+	}
+	
+.over {
+	background: #41bfe6;
+	}
 
