--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -1233,4 +1233,44 @@ border: 1px solid #003e40;
 .over {
 	background: #41bfe6;
 	}
+	
+	
+	
+	
+	
+	
+	#box{
+	border: 1px solid #003e40;
+   background: #1f6e86;
+   background: -webkit-gradient(linear, left top, left bottom, from(#1a9dc5), to(#1f6e86));
+   background: -webkit-linear-gradient(top, #1a9dc5, #1f6e86);
+   background: -moz-linear-gradient(top, #1a9dc5, #1f6e86);
+   background: -ms-linear-gradient(top, #1a9dc5, #1f6e86);
+   background: -o-linear-gradient(top, #1a9dc5, #1f6e86);
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: 2px 2px 5px black;
+   color: white;
+   font-size: 20px;
+   font-family: 'coolvetica_rg';
+	height: 30px;
+	margin-top: 80px;
+	padding-top:30px;
+	width:400px;
+}
+
+#box p{
+	font-size:25px;
+	background:url('img/warning.png') no-repeat 10px center;
+	padding-left:90px;
+}
+
+#box p b{
+	font-size:52px;
+	display:block;
+}
 
