Signed-off-by: Michel Gille <gille@intechinfo.fr>

--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -752,11 +752,11 @@ border: 1px solid #003e40;
    border-radius: 6px;
    border: 1px solid #003e40;
    background: #1f6e86;
-   background: -webkit-gradient(linear, left top, left bottom, from(#bfe9f6), to(#7cd3ed));
-   background: -webkit-linear-gradient(top, #bfe9f6, #7cd3ed);
-   background: -moz-linear-gradient(top, #bfe9f6, #7cd3ed);
-   background: -ms-linear-gradient(top, #bfe9f6, #7cd3ed);
-   background: -o-linear-gradient(top, #bfe9f6, #7cd3ed);
+   background: -webkit-gradient(linear, left top, left bottom, from(#bfe9f6), to(#94becb));
+   background: -webkit-linear-gradient(top, #bfe9f6, #94becb);
+   background: -moz-linear-gradient(top, #bfe9f6, #94becb);
+   background: -ms-linear-gradient(top, #bfe9f6, #94becb);
+   background: -o-linear-gradient(top, #bfe9f6, #94becb);
    padding: 6px -5px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
