Signed-off-by: Michel Gille <gille@intechinfo.fr>

--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -5,7 +5,7 @@
 html { overflow-y: scroll; }
 
 body {
-	background-color: #E2EDEB;
+	background-color: #62b763;
     font-family: 'Calibri';
 }
 a {
