Signed-off-by: Salman ALAMDAR <salman.alamdar@gmail.com>

--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -1081,7 +1081,7 @@ select:active, select:focus {
   text-align:center;
 }
 #rehan {
-  width:1105px;
+  width:104%;
 }
 .cat_color {
   color:red;
