--- a/Developpement/design/debate.css
+++ b/Developpement/design/debate.css
@@ -1,10 +1,5 @@
 .presentation {
-       background: #34782a;
-   background: -webkit-gradient(linear, left top, left bottom, from(#5bb64f), to(#34782a));
-   background: -webkit-linear-gradient(top, #5bb64f, #34782a);
-   background: -moz-linear-gradient(top, #5bb64f, #34782a);
-   background: -ms-linear-gradient(top, #5bb64f, #34782a);
-   background: -o-linear-gradient(top, #5bb64f, #34782a);
+       background: #1CABD7;
    padding: 6px -5px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
@@ -24,12 +19,8 @@
     width: 838px;
 }
 input[type="submit"] {
-       background: #34782a;
-   background: -webkit-gradient(linear, left top, left bottom, from(#5bb64f), to(#34782a));
-   background: -webkit-linear-gradient(top, #5bb64f, #34782a);
-   background: -moz-linear-gradient(top, #5bb64f, #34782a);
-   background: -ms-linear-gradient(top, #5bb64f, #34782a);
-   background: -o-linear-gradient(top, #5bb64f, #34782a);
+       background: #1CABD7;
+
    padding: 6px -5px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
@@ -59,12 +50,7 @@ input[type="submit"] {
     z-index: 1;
 }
 dl {
-        background: #34782a;
-   background: -webkit-gradient(linear, left top, left bottom, from(#5bb64f), to(#34782a));
-   background: -webkit-linear-gradient(top, #5bb64f, #34782a);
-   background: -moz-linear-gradient(top, #5bb64f, #34782a);
-   background: -ms-linear-gradient(top, #5bb64f, #34782a);
-   background: -o-linear-gradient(top, #5bb64f, #34782a);
+        background: #1CABD7;
    padding: 6px -5px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
@@ -86,12 +72,8 @@ dl {
     z-index: -17;
 }
 dt {
-        background: #34782a;
-   background: -webkit-gradient(linear, left top, left bottom, from(#5bb64f), to(#34782a));
-   background: -webkit-linear-gradient(top, #5bb64f, #34782a);
-   background: -moz-linear-gradient(top, #5bb64f, #34782a);
-   background: -ms-linear-gradient(top, #5bb64f, #34782a);
-   background: -o-linear-gradient(top, #5bb64f, #34782a);
+        background: #1CABD7;
+
    padding: 6px -5px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
@@ -110,12 +92,8 @@ dt {
     width: 838px;
 }
 dd {
-       background: #34782a;
-   background: -webkit-gradient(linear, left top, left bottom, from(#5bb64f), to(#34782a));
-   background: -webkit-linear-gradient(top, #5bb64f, #34782a);
-   background: -moz-linear-gradient(top, #5bb64f, #34782a);
-   background: -ms-linear-gradient(top, #5bb64f, #34782a);
-   background: -o-linear-gradient(top, #5bb64f, #34782a);
+       background: #1CABD7;
+
    padding: 6px -5px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
